2001-04-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm (template): Fix bug in base class implementation

	* General.pm: Pod tidy

	* Msg/Task/ADAMShell.pm: Fix unrecognized escapes

	* Frame/UFTI.pm (template): Fix "my" masking

	* Frame/MichTemp.pm (template): Fix "my" masking

	* Inst.pm (_algeng): bug wit hvoid context

	* Calib/Michelle.pm: Create

	* Calib/IRCAM.pm: Add warnings and File::Spec

	* Index.pm: White space + add warnings pragma

        --- Starlink V2.1-1 + make branch --------
	
2001-04-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Display.pm (display_data): Fix typo in checking @_ rather than $@!

	* Display/KAPVIEW.pm (histogram): Need to quote the range

2001-04-15  Tim Jenness <t.jenness@jach.hawaii.edu>

	* Release ORAC-DR 2.1-0 to Starlink

2001-04-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm: Fix pod error and remove header() and userheader() 

2001-03-29  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_start_algorithm_engines): Fix problem with -noeng
	(for some reason it had not set a default hash ref)

2001-03-21  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UFTI.pm (calc_orac_headers): Make sure we run the base
	class version to get the ORAC_ headers

2001-03-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: AGI_DIR removal now done by ORAC::Inst::Defn

	* Print.pm: Add ORAC::Event dependency

	* Recipe.pm (_check_obey_status_string): Fix pattern match for
	task name

	* Frame/CGS4.pm (findnsubs): Use more intelligence when searching
	for .I components

2001-03-19  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UFTI.pm: Add ORAC_ header support

	* Frame/UKIRT.pm: Add ORAC_ header support

	* Frame/IRCAM2.pm: Add ORAC_ header support

	* Frame.pm (calc_orac_headers): Add support for ORAC_
	keywords. Add translate_hdr

	* Xorac.pm: Fix spelling of my name

2001-03-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_add_code_to_recipe): Return "good" status at recipe end
