@@ -1,5 +1,7 @@
 2001-04-25  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Group.pm: Add subgrp(s) with uhdr check
+
 	* Frame.pm (template): Fix bug in base class implementation
 
 	* General.pm: Pod tidy
